wip moving to common, each api's
